--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
-  "name": "movie__app",
+  "name": "dz_1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-star-ratings": "^2.3.0",
+    "redux": "^4.1.1",
+    "web-vitals": "^1.1.2",
+    "node-sass": "^6.0.1",
+    "styled-components": "^5.3.1",
+    "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.16",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-router": "^5.1.16",
+    "@types/react-redux": "^7.1.18",
+    "@types/redux": "^3.6.0",
+    "@types/axios": "^0.14.0"
   },
   "scripts": {
     "start": "react-scripts start",
